<?xml version="1.0" encoding="utf-8"?>
<com.samsung.android.biometrics.app.setting.prompt.credential.AuthCredentialPatternView android:gravity="center_horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:layout_gravity="bottom" android:orientation="vertical" android:id="@id/main_view" android:background="@drawable/sem_auth_credential_dialog_bg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/auth_credential_main_view_margin_top" android:weightSum="2.0">
        <LinearLayout android:gravity="center" android:layout_gravity="top" android:orientation="vertical" android:id="@id/title_view" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="0.0">
            <ImageView android:id="@id/icon" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/auth_credential_icon_margin_top" />
            <View android:id="@id/id_credential_scroll_top_divider" android:background="#ffe4e4e7" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="1.0sp" />
            <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="fill_parent">
                <ScrollView android:id="@id/id_credential_prompt_dialog_scroll" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0" app:layout_constrainedHeight="true" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHeight_max="150.0dip" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent">
                    <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                        <TextView android:id="@id/title" android:layout_width="wrap_content" android:layout_height="wrap_content" style="@style/AuthCredentialStyle.Title" />
                        <TextView android:id="@id/subtitle" android:layout_width="wrap_content" android:layout_height="wrap_content" style="@style/AuthCredentialStyle.SubTitle" />
                        <TextView android:id="@id/description" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:textAlignment="center" />
                        <TextView android:id="@id/customized_view_description" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:textAlignment="center" />
                        <LinearLayout android:layout_gravity="start" android:orientation="vertical" android:id="@id/id_prompt_description_layout_list_box" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginStart="24.0dip">
                            <ListView android:id="@id/prompt_description_list_view" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="6.0dip" android:layout_marginBottom="16.0dip" android:listSelector="@android:color/transparent" android:divider="@null" android:layout_marginStart="8.0dip" />
                        </LinearLayout>
                        <LinearLayout android:layout_gravity="start" android:orientation="vertical" android:id="@id/id_prompt_description_layout_more_option_box" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginStart="24.0dip">
                            <TextView android:textSize="12.0dip" android:textColor="@color/biometric_prompt_more_option_button_color" android:gravity="center" android:id="@id/customized_view_more_options_button" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:layout_marginBottom="16.0dip" android:text="@string/biometric_prompt_button_more_options" android:fontFamily="sec" android:textFontWeight="400" />
                        </LinearLayout>
                    </LinearLayout>
                </ScrollView>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <View android:id="@id/id_credential_scroll_bottom_divider" android:background="#ffe4e4e7" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="1.0sp" />
        </LinearLayout>
        <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/edit_view" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="0.0">
            <LinearLayout android:gravity="center" android:orientation="vertical" android:clipToPadding="false" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:layout_gravity="center" android:id="@id/error" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/biometric_prompt_unlock_pattern" style="@style/AuthCredentialStyle.Error" />
                <FrameLayout android:id="@id/layout_lockPattern" android:layout_width="wrap_content" android:layout_height="0.0dip" android:layout_weight="1.0" style="@style/LockPatternContainerStyle">
                    <com.android.internal.widget.LockPatternView android:layout_gravity="center" android:id="@id/lockPattern" android:layout_width="fill_parent" android:layout_height="fill_parent" style="@style/LockPatternStyleBiometricPrompt" />
                </FrameLayout>
                <Button android:textSize="15.0sp" android:textColor="#ff252528" android:layout_gravity="center" android:id="@id/emergency_call_button" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="12.0dip" android:layout_marginBottom="16.0dip" android:text="@string/biometric_dialog_credential_emergency_calls_button" android:textAllCaps="false" android:fontFamily="sec-600" android:paddingStart="15.0dip" android:paddingEnd="14.0dip" android:textFontWeight="600" />
                <View android:id="@id/bottom_space" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="0.1" />
                <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:weightSum="2.0">
                    <com.samsung.android.biometrics.app.setting.prompt.credential.AuthCredentialBottomBarButton android:id="@id/btn_cancel" android:visibility="gone" android:layout_width="0.0dip" android:text="@string/biometric_prompt_default_cancel" style="@style/AuthCredentialStyle.Button" />
                    <com.samsung.android.biometrics.app.setting.prompt.credential.AuthCredentialBottomBarButton android:enabled="false" android:id="@id/btn_continue" android:visibility="gone" android:layout_width="0.0dip" android:text="@string/biometric_prompt_default_continue" style="@style/AuthCredentialStyle.Button" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</com.samsung.android.biometrics.app.setting.prompt.credential.AuthCredentialPatternView>
